--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@stripe/stripe-js": "^4.9.0",
+    "@vercel/blob": "^0.26.0",
+    "framer-motion": "^11.11.11",
     "mongoose": "^8.7.3",
     "next": "15.0.2",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "stripe": "^17.3.0"
   },
