--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@stripe/stripe-js": "^4.9.0",
     "@vercel/blob": "^0.26.0",
-    "framer-motion": "^11.11.11",
     "mongoose": "^8.7.3",
-    "next": "15.0.2",
+    "motion": "^12.4.1",
+    "next": "^15.1.6",
+    "pg": "^8.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pg": "^8.11.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
