--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@stripe/stripe-js": "^4.9.0",
     "@vercel/blob": "^0.26.0",
-    "mongoose": "^8.7.3",
     "motion": "^12.4.1",
     "next": "^15.1.6",
+    "next-nprogress-bar": "^2.4.4",
+    "nprogress": "^0.2.0",
     "pg": "^8.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
