--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@stripe/stripe-js": "^4.9.0",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^4.10.0",
     "@vercel/blob": "^0.26.0",
     "motion": "^12.4.1",
     "next": "^15.1.6",
@@ -19,7 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "stripe": "^17.3.0",
+    "stripe": "^17.7.0",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
