--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vercel/blob": "^0.26.0",
     "motion": "^12.4.1",
     "next": "^15.1.6",
+    "next-auth": "^4.24.11",
     "next-nprogress-bar": "^2.4.4",
     "nprogress": "^0.2.0",
     "pg": "^8.13.1",
