--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^4.10.0",
     "@vercel/blob": "^0.26.0",
+    "bcrypt": "^5.1.1",
     "motion": "^12.4.1",
     "next": "^15.1.6",
     "next-auth": "^4.24.11",
@@ -22,14 +23,17 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "stripe": "^17.7.0",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/pg": "^8.11.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
+    "@types/validator": "^13.12.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
