--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "stripe": "^17.7.0",
+    "typewriter-effect": "^2.21.0",
     "uuid": "^11.0.5",
     "validator": "^13.12.0"
   },
